<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/camera_layout"
    android:baselineAligned="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000" >

    <FrameLayout
        android:id="@+id/camera_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <SurfaceView
            android:id="@+id/preview_surface"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <Button
        android:id="@+id/switch_camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="7dp"
        android:layout_marginRight="10dp"
        android:text="@string/switch_camera_text"
        android:visibility="gone"
        android:enabled="false" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/camera_capture_button"
            android:contentDescription="@string/capture_button_description"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginRight="2dp"
            android:text="@string/capture_button_text" />

        <Button
            android:id="@+id/camera_record_button"
            android:contentDescription="@string/record_button_description"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginLeft="2dp"
            android:text="@string/record_button_text" />

    </LinearLayout>

</RelativeLayout>
